--- a/index.html
+++ b/index.html
@@ -105,25 +105,15 @@
         <div class="game-zone">
             <canvas id="c" width="420" height="700"></canvas>
         </div>
+        <div class="controls">
+            <div aria-live="polite">Built for Telegram Mini Apps.</div>
+            <button id="restart-btn" type="button">Restart</button>
+        </div>
     </div>
 
     <script>
         (() => {
             const tg = window.Telegram?.WebApp;
-
-            (function showInitDataDebug() {
-                const hint = document.querySelector(".hint");
-                if (!tg) {
-                    hint.textContent = "Not running inside Telegram (window.Telegram.WebApp missing).";
-                    return;
-                }
-                const raw = tg.initData || "";
-                const unsafe = tg.initDataUnsafe || {};
-                hint.textContent = raw
-                    ? `Telegram initData OK • user=${unsafe?.user?.id ?? "?"}`
-                    : "Telegram WebApp loaded but initData is empty (opened outside Telegram / wrong launch path).";
-            })();
-
 
             const canvas = document.getElementById("c");
             const ctx = canvas.getContext("2d");
